# finetune-sparse-embedding-norwegian

./: .gitignore  CHANGELOG.md  README.md  SPARSITY_GUIDE.md  pyproject.toml  requirements.txt  train_sparse_multidataset.py
configs/: README.md  training_config_csr.yaml  training_config_csr_h100.yaml  training_config_splade.yaml  training_config_splade_eti_h100.yaml  training_config_splade_h100.yaml  training_config_splade_large.yaml  training_config_splade_large_h100.yaml  training_config_splade_large_multi_h100.yaml  training_config_splade_regular.yaml  training_config_splade_regular_h100.yaml  training_config_splade_xlarge_multi_h100.yaml
docs/: QUICKSTART.md  QUICK_REFERENCE.md  SPARSE_ARCHITECTURES.md
scripts/: evaluate_sparse_mteb.py  patch_norbert4_for_splade.py
utils/: data_loader_ddsc.py  data_loader_eti.py  data_loader_nli.py  data_loader_paws.py  data_loader_scandi_qa.py  sparse_data_formatter.py
