[project]
name = "finetune-sparse-embedding-norwegian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=2.14.0",
    "mlflow>=2.9.0",
    "mteb>=1.12.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=3.0.0",
    "tensorboard>=2.14.0",
    "torch>=2.0.0",
    "transformers>=4.41.0",
]
